--- a/operacional/templates/operacional/plano_aulas.html
+++ b/operacional/templates/operacional/plano_aulas.html
@@ -8,6 +8,7 @@
 {% block head %}
   {% load static %}
   {% load l10n %}
+  {% load linguas %}
   <script src="{% static 'js/sort.js' %}"></script>
 {% endblock %}
 
